--- a/.github/workflows/junit.yml
+++ b/.github/workflows/junit.yml
@@ -1,5 +1,13 @@
 name: Run unit tests
-on: push
+
+on:
+  push:
+    branches: [ "master" ]
+  pull_request:
+    branches: [ "master" ]
+  schedule:
+    - cron: '*/2 * * * *' # every 2 minutes
+  workflow_dispatch:
 
 jobs:
   run_tests:
