--- a/.github/workflows/junit.yml
+++ b/.github/workflows/junit.yml
@@ -1,13 +1,14 @@
 name: Run unit tests
 
-on:
-  push:
-    branches: [ "master" ]
-  pull_request:
-    branches: [ "master" ]
-  schedule:
-    - cron: '*/2 * * * *' # every 2 minutes
-  workflow_dispatch:
+on: push
+#on:
+#  push:
+#    branches: [ "master" ]
+#  pull_request:
+#    branches: [ "master" ]
+#  schedule:
+#    - cron: '*/2 * * * *' # every 2 minutes
+#  workflow_dispatch:
 
 jobs:
   run_tests:
